#    git diff <cluster commit id> Changelog
# Также стоит сравнить версии в следующих файлах:
#    yt/server/cell_master/serialize.cpp - если версия другая, то обновлнеие нужно делать через снапшот мастера (сделаный с --set-read-only).
#    yt/server/tablet_node/serialize.cpp - если версия другая, то обновление нужно делать с пересозданием таблет-целлов.

* savrus: Изменился протокол добавления нового мастер-целла, обновлять мастеров через снапшот.
* savrus: Добавились новые мутации при подсчёте статистик таблет-целлов, обновлять мастеров через снапшот.
* babenko: Изменилась семантика проверки прав на реплики, обновлять мастеров через снепшот.
* max42: Обновить архив операций до версии 29 (колонка annotations).
* savrus: Поменялся формат снапшотов таблет-целлов и протокол общения между мастерами. Нужно проследить что нет декоммиссированных таблет-целлов и обновиться через снапшот.
* shakurov: Увеличен тип TClusterResources::{Node,Chunk}Count с int до i64; обновляться через снапшот.
* shakurov: Добавлены новые поля в NNodeTrackerServer::TNode, обновляться через снапшот.
* shakurov: Добавлена настройка в конфиги медиумов; для корректной ее инициализации обновляться через снапшот.
* prime: Обновить архив операций до версии 28.
* aozeritsky: Добавлены новые поля в TUser, обновляться через снапшот.
* aozeritsky: Поменялся протокол сообщений между мастерами, обновляться через снапшот.
* aozeritsky: Поменялся протокол сообщений между мастерами, обновляться через снапшот.
* renadeen: Обновить архив операций до версии 27.
* max42: Необходимо обновить архив операций до версии минимум 26.
* savrus: Подправил протокол общения между мастерами, обновляться через снапшот.
* savrus: Подправил протокол общения между мастерами, обновляться через снапшот.
* savrus: В статистики таблет целлов добавилoсь поле health, обновляться через снапшот.