@@ -6,6 +6,7 @@
 #    yt/server/cell_master/serialize.cpp - если версия другая, то обновлнеие нужно делать через снапшот мастера (сделаный с --set-read-only).
 #    yt/server/tablet_node/serialize.cpp - если версия другая, то обновление нужно делать с пересозданием таблет-целлов.
 
+* savrus: Поменялись проверки прав для доступа к tablet action и tablet cell bundle, обновлять мастеров через снапшот.
 * savrus: Изменился протокол добавления нового мастер-целла, обновлять мастеров через снапшот.
 * savrus: Добавились новые мутации при подсчёте статистик таблет-целлов, обновлять мастеров через снапшот.
 * babenko: Изменилась семантика проверки прав на реплики, обновлять мастеров через снепшот.
